--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-matplotlib==3.10.3
-numpy==2.3.1
-pandas==2.3.0
+matplotlib==3.10.5
+mido==1.3.3
+numpy==2.3.2
+pandas==2.3.1
 pretty_midi==0.2.10
 pyfluidsynth==1.3.4
-scikit_learn==1.7.0
-scipy==1.16.0
+pygame==2.6.1
+PyYAML==6.0.2
+PyYAML==6.0.2
+scikit_learn==1.7.1
+scipy==1.16.1
 seaborn==0.13.2
 sounddevice==0.5.1
 symusic==0.5.8
